// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown/presenters/OptionPresenter renders with all props 1`] = `
.emotion-0 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-1 {
  fill: #808080;
}

.emotion-1 > * {
  fill: #808080;
}

.emotion-2 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 1;
  fill: #0696d7;
}

.emotion-3 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: rgba(128,128,128,0.1);
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-3:active {
  background-color: rgba(128,128,128,0.2);
}

<div
  aria-selected={true}
  className="emotion-3"
  disabled={undefined}
  id={undefined}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  role="option"
  tabIndex="0"
>
  <span
    className="emotion-0"
  >
    <p>
      hi
    </p>
  </span>
  <div
    className="emotion-2"
  >
    <svg
      className="emotion-1"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
      />
    </svg>
  </div>
</div>
`;

exports[`Dropdown/presenters/OptionPresenter renders without props 1`] = `
.emotion-0 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-2 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 0;
}

.emotion-3 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-3:active {
  background-color: rgba(128,128,128,0.2);
}

.emotion-1 {
  fill: #808080;
}

.emotion-1 > * {
  fill: #808080;
}

<div
  aria-selected={undefined}
  className="emotion-3"
  disabled={undefined}
  id={undefined}
  onClick={undefined}
  onKeyDown={undefined}
  onMouseDown={undefined}
  onMouseMove={undefined}
  role="option"
  tabIndex="0"
>
  <span
    className="emotion-0"
  />
  <div
    className="emotion-2"
  >
    <svg
      className="emotion-1"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
      />
    </svg>
  </div>
</div>
`;
